feat: adjust changes and linting